// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - Tab:  should match the snapshot 1`] = `
<DocumentFragment>
  <div
    aria-controls="panel-all"
    class="component__Container-sc-1g3gad9-0 hRXPUQ"
    role="tab"
  >
    <span>
      all
    </span>
  </div>
</DocumentFragment>
`;

exports[`Components - Tab:  should match the snapshot for active state 1`] = `
<DocumentFragment>
  <div
    aria-controls="panel-all"
    class="component__Container-sc-1g3gad9-0 gAJFND"
    role="tab"
  >
    <span>
      all
    </span>
  </div>
</DocumentFragment>
`;
